<resources>
    <string name="app_name">History Of Weapons</string>
    <string name="select_language_comb" translatable="false">Select language! (Alegeti limba!)</string>
    <string name="select_language_message_comb" translatable="false">This can be changed later. (Aceasta setare se poate modifica mai tarziu.)</string>
    <string name="english">English</string>
    <string name="updating_info">Updating info</string>
    <string name="loading">Loading...</string>
    <string name="history_of_weapons">History of Weapons</string>
    <string name="contact">You can contact us at: akitektuo@yahoo.com</string>
    <string name="quiz">Quiz</string>
    <string name="history">History</string>
    <string name="shop">Shop</string>
    <string name="language">Language</string>
    <string name="romanian">Romanian</string>
    <string name="cancel">Cancel</string>
    <string name="select_language">Select language!</string>
    <string name="select_language_message">This can be changed later.</string>
    <string name="variant" translatable="false">Variant</string>
    <string name="variant_a" translatable="false">Variant A</string>
    <string name="variant_b" translatable="false">Variant B</string>
    <string name="variant_c" translatable="false">Variant C</string>
    <string name="variant_d" translatable="false">Variant D</string>
    <string name="select_tool">Select a tool</string>
    <string name="count_tools" translatable="false">"  %1$d  "</string>
    <string name="title_filter">What do you want to see?</string>
    <string name="filter">Filter</string>
    <string name="item_title" translatable="false">item_title_%1$d</string>
    <string name="test_long_text" translatable="false">\t\tDid shy say mention enabled through elderly improve. As at so believe account evening behaved hearted is. House is tiled we aware. It ye greatest removing concerns an overcame appetite. Manner result square father boy behind its his. Their above spoke match ye mr right oh as first. Be my depending to believing perfectly concealed household. Point could to built no hours smile sense.
\n
\t\tNow seven world think timed while her. Spoil large oh he rooms on since an. Am up unwilling eagerness perceived incommode. Are not windows set luckily musical hundred can. Collecting if sympathize middletons be of of reasonably. Horrible so kindness at thoughts exercise no weddings subjects. The mrs gay removed towards journey chapter females offered not. Led distrusts otherwise who may newspaper but. Last he dull am none he mile hold as.
\n
\t\tOffered say visited elderly and. Waited period are played family man formed. He ye body or made on pain part meet. You one delay nor begin our folly abode. By disposed replying mr me unpacked no. As moonlight of my resolving unwilling.
\n
\t\tOld there any widow law rooms. Agreed but expect repair she nay sir silent person. Direction can dependent one bed situation attempted. His she are man their spite avoid. Her pretended fulfilled extremely education yet. Satisfied did one admitting incommode tolerably how are.
\n
\t\tAssure polite his really and others figure though. Day age advantages end sufficient eat expression travelling. Of on am father by agreed supply rather either. Own handsome delicate its property mistress her end appetite. Mean are sons too sold nor said. Son share three men power boy you. Now merits wonder effect garret own.
\n
\t\tAm if number no up period regard sudden better. Decisively surrounded all admiration and not you. Out particular sympathize not favourable introduced insipidity but ham. Rather number can and set praise. Distrusts an it contented perceived attending oh. Thoroughly estimating introduced stimulated why but motionless.
\n
\t\tYourself off its pleasant ecstatic now law. Ye their mirth seems of songs. Prospect out bed contempt separate. Her inquietude our shy yet sentiments collecting. Cottage fat beloved himself arrived old. Grave widow hours among him ﻿no you led. Power had these met least nor young. Yet match drift wrong his our.
\n
\t\tDebating me breeding be answered an he. Spoil event was words her off cause any. Tears woman which no is world miles woody. Wished be do mutual except in effect answer. Had boisterous friendship thoroughly cultivated son imprudence connection. Windows because concern sex its. Law allow saved views hills day ten. Examine waiting his evening day passage proceed.
\n
\t\tAre own design entire former get should. Advantages boisterous day excellence boy. Out between our two waiting wishing. Pursuit he he garrets greater towards amiable so placing. Nothing off how norland delight. Abode shy shade she hours forth its use. Up whole of fancy ye quiet do. Justice fortune no to is if winding morning forming.
\n
\t\tFolly was these three and songs arose whose. Of in vicinity contempt together in possible branched. Assured company hastily looking garrets in oh. Most have love my gone to this so. Discovered interested prosperous the our affronting insipidity day. Missed lovers way one vanity wishes nay but. Use shy seemed within twenty wished old few regret passed. Absolute one hastened mrs any sensible. </string>
    <string name="balance" translatable="false">"%1$d "</string>
    <string name="price_skip" translatable="false">5</string>
    <string name="price_hint" translatable="false">10</string>
    <string name="price_exclude" translatable="false">20</string>
    <string name="price_show" translatable="false">30</string>
    <string name="not_tools">Not enough tools</string>
    <string name="skip_selected">Skip selected</string>
    <string name="hint_selected">Hint selected</string>
    <string name="exclude_selected">Exclude selected</string>
    <string name="show_selected">Show selected</string>
    <string name="tool_not_selected">Tool not selected</string>
    <string name="use">Use</string>
    <string name="not_enough_chips">Not enough chips</string>
    <string name="selected_nothing">You selected nothing.</string>
    <string name="guns">" guns,"</string>
    <string name="bombs">" bombs,"</string>
    <string name="tanks">" tanks,"</string>
    <string name="navy">" navy,"</string>
    <string name="planes">" planes,"</string>
    <string name="buy">Buy</string>
    <string name="buy_skip">Buy the tool Skip?</string>
    <string name="buy_hint">Buy the tool Hint?</string>
    <string name="buy_exclude">Buy the tool Exclude?</string>
    <string name="buy_show">Buy the tool Show?</string>
    <string name="you_selected">You selected:</string>
    <string name="progress_bar_status" translatable="false">%1$d&#37;</string>
    <string name="updating_database">Updating database&#8230;</string>
</resources>

